# wakatime-bot

./: .env.example  .gitignore  README.md  bot.sh  excluded_lang.json  languages.json  pyproject.toml
src/: bot.py  config.py  db.py  fetch.py  handlers.py  languages.py  logger.py  scheduler.py
